# web_crawler

./: Cargo.toml  README.md  tauri.conf.json  web_crawler_portfolio.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx
src/: config.rs  crawler.rs  fetcher.rs  main.rs  parser.rs  server.rs  storage.rs  utils.rs  visualize.rs
