[package]
name = "web_crawler"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.33", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
rusqlite = "0.28"
csv = "1.2"
scraper = "0.15"
url = "2.3"
structopt = "0.3"

[features]
default = []

[[bin]]
name = "visualize"
path = "src/visualize.rs"
