[package]
name = "web_crawler"
version = "0.1.0"
edition = "2021"

[dependencies]
structopt = "0.3"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
scraper = "0.18"
url = "2.5"
axum = { version = "0.6", features = ["headers", "http2", "json", "macros", "matched-path", "original-uri", "query", "tokio", "tower-log", "tracing"] }
tower-http = { version = "0.4", features = ["cors", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

[features]
default = []
